@@ -5,14 +5,13 @@ if @user_pass
 
   Array(@user_pass).each do |pair|
 
-    if @pair.include?(':')
-      t_result.push(@pair)
+    if pair.include?(':')
+      t_result.push(pair)
     end
   end
 else
-  Puppet::Parser::Functions::function('passgen')
   @auth_users.each do |u|
-    t_result.push("#{u}:#{scope.function_passgen([u])}")
+    t_result.push("#{u}:#{scope.call_function('simplib::passgen', [u])}")
   end
 end
 -%>
