@@ -1,3 +1,9 @@
+* Tue Feb 12 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.1-0
+- Fixed a template bug that prevented catalogue compilation when
+  rsync::server::section::user_pass was set
+- Use simplib::passgen() in lieu of passgen(), a deprecated simplib
+  Puppet 3 function.
+
 * Thu Oct 11 2018 Nick Miller <nick.miller@onyxpoint.com> - 6.1.0-0
 - Added $package_ensure parameter
   - Changed the package from 'latest' to 'installed'
